--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: rasdaemon
 Section: admin
 Priority: optional
-Maintainer: Russell Coker <russell@coker.com.au>, Taihsiang Ho <e@tai271828.me>
+Maintainer: Russell Coker <russell@coker.com.au>
+Uploaders: Taihsiang Ho <e@tai271828.me>
 Build-Depends: debhelper (>= 12), quilt, libsqlite3-dev, libgettextpo-dev,
  autoconf, dh-exec
 Standards-Version: 4.5.0
