--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,11 @@ Section: admin
 Priority: optional
 Maintainer: Taihsiang Ho <e@tai271828.me>
 Uploaders: Russell Coker <russell@coker.com.au>
-Build-Depends: debhelper (>= 12), quilt, libsqlite3-dev, libgettextpo-dev,
- autoconf, dh-exec
+Build-Depends: debhelper (>= 12), quilt, dh-exec,
+               autoconf,
+               pkg-config,
+               libsqlite3-dev, libgettextpo-dev,
+               libtraceevent-dev (>= 1)
 Standards-Version: 4.5.0
 Homepage: https://github.com/mchehab/rasdaemon
 Vcs-Git: https://salsa.debian.org/tai271828/rasdaemon
