d/control: unify the maintainer info
By unify the info, we can resolve the warning messages:
W: rasdaemon source: no-nmu-in-changelog [debian/changelog:1]
W: rasdaemon source: source-nmu-has-incorrect-version-number 0.8.0-1
[debian/changelog:1]

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: rasdaemon
 Section: admin
 Priority: optional
-Maintainer: Taihsiang Ho <e@tai271828.me>
+Maintainer: Taihsiang Ho (tai271828) <e@tai271828.me>
 Uploaders: Russell Coker <russell@coker.com.au>
 Build-Depends: debhelper (>= 12), quilt, dh-exec,
                autoconf,
