Fixing lxc-based autopkgtest failure
By using isolation-machine we can skip an environment not suitable for
the corresponding testing. Besides, let us introduce test "artifacts" to
cover the testing to some extent when ras-mc-ctl test is skipped.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,6 @@
+Tests: artifacts
+Depends: @
+
 Tests: ras-mc-ctl
 Depends: @, kmod
-Restrictions: needs-root
+Restrictions: needs-root, isolation-machine
