--- a/misc/rasdaemon.env
+++ b/misc/rasdaemon.env
@@ -44,3 +44,19 @@ CPU_ISOLATION_CYCLE="24h"
 
 # Prevent excessive isolation from causing an avalanche effect
 CPU_ISOLATION_LIMIT="10"
+
+# Event Trigger
+
+# Event trigger will be executed when the specified event occurs.
+#
+# Execute triggers path
+# For example: TRIGGER_DIR=/etc/ras/triggers
+TRIGGER_DIR=
+
+# Execute these triggers when the mc_event occured, the triggers will not
+# be executed if the trigger is not specified.
+# For example:
+#   MC_CE_TRIGGER=mc_event_trigger
+#   MC_UE_TRIGGER=mc_event_trigger
+MC_CE_TRIGGER=
+MC_UE_TRIGGER=
