d/rules: enable all features by default
Enable all features by default rather than partially in the past.

There is no reason that we only enable some features instead of all of
them.

Besides, since v0.8.1, we found the previous configuration options would
raise compilation error. By enabling all features, we can have
successful compilation. Please refer to the upstream bug report for more
details: https://github.com/mchehab/rasdaemon/issues/170

--- a/debian/rules
+++ b/debian/rules
@@ -10,8 +10,7 @@ include /usr/share/dpkg/default.mk
 # removed --enable-arm as it is experimental and does not compile
 override_dh_auto_configure:
 	dh_auto_configure -- \
-	--enable-mce --enable-aer --enable-sqlite3 --enable-extlog \
-	--enable-abrt-report \
+	--enable-all \
 	--with-sysconfdefdir=/etc/default
 
 override_dh_install:
