d/control: apply the dh-sequence-movetousr workaround to #1059484

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Taihsiang Ho (tai271828) <e@tai271828.me>
 Uploaders: Russell Coker <russell@coker.com.au>
 Build-Depends: debhelper (>= 12), quilt, dh-exec,
+               dh-sequence-movetousr,
                autoconf,
                pkg-config,
                libsqlite3-dev, libgettextpo-dev,
