--- a/.github/workflows/02_launch_vm_instance/action.yml
+++ b/.github/workflows/02_launch_vm_instance/action.yml
@@ -20,7 +20,7 @@ runs:
         sudo iptables -I DOCKER-USER -o lxdbr0 -j ACCEPT
         sudo iptables -L
         sudo apt purge -y docker-ce docker-ce-cli
-        sudo snap refresh lxd --channel=latest/stable
+        sudo snap refresh lxd --channel=5.20/stable
         sudo chmod o+g '/var/snap/lxd/common/lxd/unix.socket'
         lxd init --auto
 
